# Data-Analysis-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  environment.yml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: graph.py  mock_llm.py  state.py  tools.py
backend/app/api/: auth_routes.py  dependencies.py  middleware.py  routes.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  data_service.py  lineage.py  metadata_service.py  query_cache.py  session_service.py  streaming.py  visualization.py
backend/app/utils/: database.py  log_scrub.py  logger.py  metrics.py  pii_mask.py  rate_limit.py  request_id.py
backend/scripts/: backup.py  restore.py
backend/tests/: conftest.py  test_auth_phase4a.py  test_data_service.py  test_data_service_phase3a.py  test_http_integration.py  test_lineage_phase3e.py  test_metadata.py  test_metadata_phase3a.py  test_phase4b.py  test_phase4c.py  test_phase4d.py  test_phase4e_mock_llm.py  test_phase6_backup.py  test_phase6_multi_source.py  test_phase6_sse_concurrency.py  test_phase6_upload_cleanup.py  test_query_cache_phase3e.py  test_session_phase3c.py  test_session_service.py  test_streaming.py  test_tools_phase3b.py  test_tools_phase3e.py  test_tools_sql.py  test_visualization.py
docs/: mkdocs.yml
docs/docs/: api.md  architecture.md  deployment.md  index.md  performance-baseline.md  user-manual.md
frontend/: .dockerignore  .env.example  .eslintrc.cjs  .prettierignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/nginx/: frontend.conf
frontend/src/: App.css  App.tsx
frontend/src/components/: ErrorBoundary.tsx  PaginatedTable.tsx
frontend/src/hooks/: useChat.ts  useUi.ts  useUpload.ts
frontend/src/i18n/: translations.ts
frontend/src/pages/: Analysis.tsx  Auth.tsx  ForceChangePassword.tsx  Home.tsx
frontend/src/services/: api.ts
nginx/: frontend.conf
perf/: README.md  k6-baseline.js
tools/: precommit_eslint.py  precommit_prettier.py
(+11 files in other folders)
